--- a/core/src/main/resources/template/xhtml/styles.css
+++ b/core/src/main/resources/template/xhtml/styles.css
@@ -35,3 +35,8 @@
 .tdCheckboxErrorMessage {text-align:left; vertical-align:top;}
 .tdErrorMessage {text-align:center; vertical-align:top;}
 .formButton {text-align:right;}
+
+.tdAligncenter{text-align:center;}
+.tdAlignright{text-align:right;}
+.tdAlignleft{text-align:left;}
+.tdAlignjustify{text-align:justify;}
