--- a/core/src/main/resources/template/xhtml/styles.css
+++ b/core/src/main/resources/template/xhtml/styles.css
@@ -26,4 +26,11 @@
 .checkboxLabel {}
 .checkboxErrorLabel {color:red; }
 .required {color:red;}
-.tdLabel {text-align:right; vertical-align:top; } 
+
+.tdLabel {text-align:right; vertical-align:top; }
+
+.tdAlign-center{text-align:center;}
+.tdAlign-right{text-align:right;}
+.tdAlign-left{text-align:left;}
+.tdAlign-justify{text-align:justify;}
+
