--- a/core/src/main/resources/template/xhtml/styles.css
+++ b/core/src/main/resources/template/xhtml/styles.css
@@ -36,7 +36,7 @@
 .tdErrorMessage {text-align:center; vertical-align:top;}
 .formButton {text-align:right;}
 
-.tdAlign-center{text-align:center;}
-.tdAlign-right{text-align:right;}
-.tdAlign-left{text-align:left;}
-.tdAlign-justify{text-align:justify;}
+.align-center{text-align:center;}
+.align-right{text-align:right;}
+.align-left{text-align:left;}
+.align-justify{text-align:justify;}
