Add a class .tdInput for future and use align attribute with class="align-${parameters.align?html}"

--- a/core/src/main/resources/template/xhtml/styles.css
+++ b/core/src/main/resources/template/xhtml/styles.css
@@ -34,6 +34,7 @@
 .tdCheckboxInput {text-align:left; vertical-align:top;}
 .tdCheckboxErrorMessage {text-align:left; vertical-align:top;}
 .tdErrorMessage {text-align:center; vertical-align:top;}
+.tdInput {text-align:left;}
 .formButton {text-align:right;}
 
 .align-center{text-align:center;}
