--- a/core/src/main/resources/template/xhtml/styles.css
+++ b/core/src/main/resources/template/xhtml/styles.css
@@ -34,3 +34,4 @@
 .tdCheckboxInput {text-align:left; vertical-align:top;}
 .tdCheckboxErrorMessage {text-align:left; vertical-align:top;}
 .tdErrorMessage {text-align:center; vertical-align:top;}
+.formButton {text-align:right;}
