--- a/apps/showcase/src/main/webapp/WEB-INF/tags/ui/exampleSubmited.vm
+++ b/apps/showcase/src/main/webapp/WEB-INF/tags/ui/exampleSubmited.vm
@@ -33,41 +33,45 @@
 				#slabel ("label=Name" "name=name")
 				#slabel ("label=Birthday" "name=birthday")
 				<tr>
-			        <td><label class="label">Wake up time:</label></td>
-			        <td>
+			        <td class="tdLabel"><label class="label">Wake up time:</label></td>
+			        <td class="tdInput">
 			           #sdate ("name=wakeup" "format=hh:mm aa")
 			        </td>
 			    </tr>
 				#slabel ("label=Biography" "name=bio")
 				#slabel ("label=Favourite Color" "name=favouriteColor")
 				#slabel ("label=Friends" "name=friends")
+                                #slabel ("label=Best Friend" "name=bestFriend")
 				#slabel ("label=Legal Age" "name=legalAge")
 				#slabel ("label=Region" "name=region")
 				#slabel ("label=State" "name=state")
 				#slabel ("label=Picture" "name=picture")
 				#slabel ("label=Favourite Language" "name=favouriteLanguage")
-				#slabel ("label=Favourite Vehical Type" "name=favouriteVehicalType")
-				#slabel ("label=Favourite Vehical Specific" "name=favouriteVehicalSpecific")
+				#slabel ("label=Favourite Vehicle Type" "name=favouriteVehicalType")
+				#slabel ("label=Favourite Vehicle Specific" "name=favouriteVehicalSpecific")
 				<tr>
-					<td>Favourite Cartoon Characters (Left):</td>
-					<td>
+					<td class="tdLabel"><label class="label">Favourite Cartoon Characters (Left):</label></td>
+					<td class="tdInput"><label>
 			            #set ( $startCount = 1)
 					    #foreach( $item in $leftSideCartoonCharacters)
 							$startCount.${item}&nbsp;
 							#set ( $startCount = $startCount + 1)
 			            #end
+                                          </label>
 					</td>
 				</tr>
 				<tr>
-					<td>Favourite Cartoon Characters (Right):</td>
-					<td>
+					<td class="tdLabel"><label class="label">Favourite Cartoon Characters (Right):</label></td>
+					<td class="tdInput"><label>
 			            #set ( $startCount = 1)
 					    #foreach( $item in $rightSideCartoonCharacters)
 							$startCount.${item}&nbsp;
 							#set ( $startCount = $startCount + 1)
 			            #end
+                                          </label>
 					</td>
 				</tr>
+                                #slabel ("label=Thoughts" "name=thoughts")
 			</table>
 		</div>
 	</div>
