WW-5336 Deprecate OGNL in template context

--- a/core/src/main/resources/struts.vm
+++ b/core/src/main/resources/struts.vm
@@ -33,5 +33,5 @@
 #end
 
 #macro(property $object $property)
-$!{ognl.findValue($property, $object)}
+$!{struts.findValue($property, $object)}
 #end
