WW-5362 Removes language attribute
Co-authored-by: Sebastian Peters <sebastian.peters@gmail.com>

--- a/assembly/src/main/resources/template.vm
+++ b/assembly/src/main/resources/template.vm
@@ -48,7 +48,7 @@ under the License.
         SyntaxHighlighter.all();
     </script>
 #end
-    <script language="javascript">
+    <script>
         var hide = null;
         var show = null;
         var children = null;
